# fmgraphics

./: .editorconfig  .flake8  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
src/fmgraphics/: __init__.py  assets.py  image.py
tests/: test_assets.py  test_image.py
